VERSION SVN (~0.2.2)

VERSION 0.2.1

	* Added database field 'paymethod_method' which should hold the selected
	payment method - eg. 'paymethod_method' => 'paymentlib_offline_giro', so a
	specific method can be identified in the table tx_paymentlib_transactions.
	* Fixed typos in transaction constants
	* Fixed typos in README
	* The module "mod1" is removed. A seperate extension "paymentlib_admin" will
	handle backend operations on the tx_paymentlib_transactions table

VERSION 0.2.0

	* Add to new abstract functions, which can be used for adding extra
	functionality to the payment form (see paymentlib_offline for example):
		abstract public function transaction_formGetFormParms ()
		abstract public function transaction_formGetSubmitParms ()

	* Added constants for transactions states in 
	class.tx_paymentlib_provider.php

	* Added a tceform itemProcFunc function for displaying payment details in
	records.
		Function: itemsProcFunc_paymentDetails ($PA, $fobj)

    * Made reference a required field. If not applicable on your payment method,
    create an unique value eg. from (micro)time stamp.
    	Function: transaction_getResults ($reference)
    	Field: $transactionDetailsArr['options']['reference']

	* Altered function getTransactionsByExtKey() according to new database
	fields

    * Altered database table to reflect the common values of a transaction and a
    more non-gateway specific naming. 
        CREATE TABLE tx_paymentlib_transactions (

        	-- Standard Typo3 fields
            id int(11) UNSIGNED NOT NULL auto_increment,
            pid int(11) UNSIGNED DEFAULT '0' NOT NULL,
            crdate int(11) UNSIGNED DEFAULT '0' NOT NULL,
            
            -- Typically an unique identification of the transaction returned by
            -- gateway. Used for capture, reversal etc.
            gatewayid varchar(255) NOT NULL,
            
            -- A unique identification of the transaction by your own choise. If